--- a/map.html
+++ b/map.html
@@ -8,8 +8,6 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css">
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/horsey.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/ol3-search-layer.min.css">
         <link href="resources/ol-geocoder.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
@@ -57,12 +55,10 @@
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
-        <script src="resources/horsey.min.js"></script>
-        <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/CadanganMigasperWilayah_1.js"></script><script src="layers/WilayahKerjaMigas_2.js"></script><script src="layers/WIUPTambang_3.js"></script><script src="layers/TerminalGas_4.js"></script><script src="layers/TerminalCNG_5.js"></script><script src="layers/TerminalGasPuloampel_6.js"></script><script src="layers/Smelter_7.js"></script><script src="layers/SHPLahanKalla_8.js"></script><script src="layers/TitikLahan_9.js"></script><script src="layers/PembangkitListrik_10.js"></script><script src="layers/TitikPembangkitListrik_11.js"></script><script src="layers/SHPTambang_12.js"></script><script src="layers/TitikTambang_13.js"></script>
-        <script src="styles/CadanganMigasperWilayah_1_style.js"></script><script src="styles/WilayahKerjaMigas_2_style.js"></script><script src="styles/WIUPTambang_3_style.js"></script><script src="styles/TerminalGas_4_style.js"></script><script src="styles/TerminalCNG_5_style.js"></script><script src="styles/TerminalGasPuloampel_6_style.js"></script><script src="styles/Smelter_7_style.js"></script><script src="styles/SHPLahanKalla_8_style.js"></script><script src="styles/TitikLahan_9_style.js"></script><script src="styles/PembangkitListrik_10_style.js"></script><script src="styles/TitikPembangkitListrik_11_style.js"></script><script src="styles/SHPTambang_12_style.js"></script><script src="styles/TitikTambang_13_style.js"></script>
+        <script src="layers/CadanganMigasperWilayah_4.js"></script><script src="layers/WilayahKerjaMigas_5.js"></script><script src="layers/WIUPTambang_6.js"></script><script src="layers/TerminalGasLNG_7.js"></script><script src="layers/TerminalCNG_8.js"></script><script src="layers/PipaDistribusi_9.js"></script><script src="layers/PipaTransmisiGasBumi_10.js"></script><script src="layers/TerminalGasPuloampel_11.js"></script><script src="layers/Smelter_12.js"></script><script src="layers/SHPKawasanIndustriKalla_13.js"></script><script src="layers/TitikLahan_14.js"></script><script src="layers/PembangkitListrik_15.js"></script><script src="layers/TitikPembangkitListrik_16.js"></script><script src="layers/JaringanListrik_17.js"></script><script src="layers/SHPTambang_18.js"></script><script src="layers/TitikTambang_19.js"></script><script src="layers/RuteTambang_20.js"></script>
+        <script src="styles/CadanganMigasperWilayah_4_style.js"></script><script src="styles/WilayahKerjaMigas_5_style.js"></script><script src="styles/WIUPTambang_6_style.js"></script><script src="styles/TerminalGasLNG_7_style.js"></script><script src="styles/TerminalCNG_8_style.js"></script><script src="styles/PipaDistribusi_9_style.js"></script><script src="styles/PipaTransmisiGasBumi_10_style.js"></script><script src="styles/TerminalGasPuloampel_11_style.js"></script><script src="styles/Smelter_12_style.js"></script><script src="styles/SHPKawasanIndustriKalla_13_style.js"></script><script src="styles/TitikLahan_14_style.js"></script><script src="styles/PembangkitListrik_15_style.js"></script><script src="styles/TitikPembangkitListrik_16_style.js"></script><script src="styles/JaringanListrik_17_style.js"></script><script src="styles/SHPTambang_18_style.js"></script><script src="styles/TitikTambang_19_style.js"></script><script src="styles/RuteTambang_20_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
